Tue Dec 12 12:25:04 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Add call to wait for child process,
	to avoid zombie buildup.

Mon Dec 11 23:57:43 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Fix up handling of fds in child
	process, more fault-tolerant handling of pipe or fork errors.

Mon Dec 11 23:30:55 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Fix up handling of creation
	of temporary file, check for proper return code, give error if
	appropriate.

Mon Dec 11 23:19:28 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Lowercase content-types and
	strip off any trailing semicolons, at one last spot.  This reinserts
	code added Sep 11, which was dropped Oct 9, probably inadvertantly
	during mifluz back-out.

Sun Dec 10 15:28:44 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/ExternalTransport.cc: Use fork/exec instead of calling
	popen, which bypasses any shell escape problems.

	* htdig/ExternalParser.cc: Ditto, plus use of mkstemp where
	available to pick the filename.

	* configure, configure.in: Check for mkstemp where available.

	* include/htconfig.h.in: Define it as above.

	* htlib/Makefile.am: Omit regex.c from SOURCES--this is included
	when necessary by the configure script. Otherwise this produces
	duplicate declarations, etc.

	* htlib/Makefile.in: Regenerate using automake --foreign.

	* htcommon/URL.cc: Fix bug with ports of 0 showing up in URLs like
	mailto: or other less-common protocols.

Fri Dec  1 14:45:33 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.2.0.spec: Updated to 3.2.0b3.

Fri Dec  1 13:59:09 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Makefile.am: Fix pkginclude_HEADERS to list missing headers
	ber.h, libdefs.h, myqsort.h, mhash_md5.h, omit unneeded langinfo.h;