@@ -1,3 +1,9 @@
+Tue Dec 12 12:52:14 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/ExternalParser.cc (parse): Handle parser command string
+	as a string list again to allow arguments, build up argv and
+	use execv instead of execl.
+
 Tue Dec 12 12:25:04 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/ExternalParser.cc (parse): Add call to wait for child process,
